# kwik

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
include/: arg_parser.hpp  binary_tree.hpp  csv.hpp  file.hpp  format.hpp  kwik.hpp  list.hpp  thread_pool.hpp  utils.hpp
include/kwik/: arg_parser.hpp  avl_tree.hpp  binary_reader.hpp  binary_tree.hpp  binary_writer.hpp  csv.hpp  csv_reader.hpp  csv_writer.hpp  file.hpp  file_reader.hpp  file_writer.hpp  format.hpp  genetic.hpp  hash_list.hpp  kwik.hpp  list.hpp  progress.hpp  thread_pool.hpp  utils.hpp
lib/: arg_parser.cpp  binary_reader.cpp  csv.cpp  csv_reader.cpp  csv_writer.cpp  file.cpp  file_reader.cpp  file_writer.cpp  format.cpp  progress.cpp  thread_pool.cpp  utils.cpp
src/: binary_reader.rs  binary_writer.rs  csv_reader.rs  csv_writer.rs  file_reader.rs  file_writer.rs  fmt.rs  genetic.rs  lib.rs  math.rs  mem.rs  progress.rs  table.rs  text_reader.rs  text_writer.rs  thread_pool.rs  time.rs  tma.rs  utils.rs
src/collections/: hash_graph.rs  hash_list.rs  hash_tree.rs  mod.rs
src/file/: hash.rs  mod.rs
src/file/binary/: mod.rs  reader.rs  writer.rs
src/file/csv/: mod.rs  reader.rs  writer.rs
src/file/hash/: mod.rs
src/file/text/: mod.rs  reader.rs  writer.rs
src/genetic/: chromosome.rs  error.rs  fitness.rs  gene.rs  genes.rs  individual.rs  limit.rs  mod.rs  offspring.rs  result.rs  solution.rs
src/math/: mod.rs  set.rs  zipf.rs
src/math/stats/: acf.rs  mod.rs  zipf.rs
src/plot/: bar_plot.rs  box_plot.rs  figure.rs  line_plot.rs  mod.rs  scatter_plot.rs  value.rs
src/progress/: mod.rs  state.rs  worker.rs
src/sys/: cpu.rs  mem.rs  mod.rs
src/table/: cell.rs  mod.rs  row.rs
src/thread_pool/: mod.rs  worker.rs
tests/: test.cpp
