[package]
name = "kwik"
version = "1.18.6"
edition = "2024"
license = "MIT"
description = "A set of useful tools I use for my Ph.D. research."
repository = "https://github.com/KiaShakiba/kwik.git"
readme = "README.md"
keywords = ["utilities", "plotting", "files", "hashlist", "genetic"]
categories = ["algorithms", "data-structures", "filesystem"]

[dependencies]
csv = "1.3.1"
gnuplot = "0.0.46"
indexmap = "2.10.0"
md-5 = "0.10.6"
num-format = "0.4.4"
num-traits = "0.2.19"
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.11.0"
sha2 = "0.10.9"
statrs = "0.18.0"
sysinfo = "0.37.0"
thiserror = "2.0.15"
nohash-hasher = "0.2.0"
linreg = "0.2.0"
parking_lot = "0.12.4"
serde = "1.0.219"

[dev-dependencies]
approx = "0.5.1"
serde_test = "1.0.177"
