[package]
name = "kwik"
version = "1.18.12"
edition = "2024"
license = "MIT"
description = "A set of useful tools I use for my Ph.D. research."
repository = "https://github.com/KiaShakiba/kwik.git"
readme = "README.md"
keywords = ["utilities", "plotting", "files", "hashlist", "genetic"]
categories = ["algorithms", "data-structures", "filesystem"]

[dependencies]
csv = "1.4.0"
gnuplot = "0.0.46"
indexmap = "2.11.4"
md-5 = "0.10.6"
num-format = "0.4.4"
num-traits = "0.2.19"
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.11.0"
sha2 = "0.10.9"
statrs = "0.18.0"
sysinfo = "0.37.1"
thiserror = "2.0.17"
nohash-hasher = "0.2.0"
linreg = "0.2.0"
parking_lot = "0.12.5"
serde = "1.0.228"

[dev-dependencies]
approx = "0.5.1"
serde_test = "1.0.177"
droptest = "0.2.1"
